@@ -11,7 +11,7 @@ import (
 const logo = `
  ======= ===  === === ======== ===  ===  ===
 ===      ===  === === ===      ===  ===  ===
-===      ===  === === ======   ===  ===  ===
+===      ===  === === ======   ===  ===  ===	
 ===       ======  === ===       ===========
  =======    ==    === ========   ==== ====
 `
